Fixes #2 - Added blurred shadow behind nav links - only visible when the tiMOTHy goes behind the nav

--- a/src/DNI.Web/src/styles.scss
+++ b/src/DNI.Web/src/styles.scss
@@ -66,3 +66,7 @@ footer {
     .footer-links {
     }
 }
+
+.text-shadow {
+    text-shadow: 0 0 3px $black;
+}
